# Legalsense

./: rag_eval.txt
.github/workflows/: backend-ci.yml  frontend-ci.yml  rag-eval.yml
Backend/: RAG_DOCUMENTATION.md  Readme.md  pyproject.toml  railpack.json  railway.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/v1/endpoints/: chat.py  documents.py  feedback.py  translate.py
Backend/app/core/: auth.py  config.py  eval_storage.py  rate_limiter.py  redis_client.py  semantic_cache.py  ws_rate_limit.py
Backend/app/db/: supabase_client.py
Backend/app/models/: chat.py  document.py
Backend/app/services/: ai_analysis.py  chat_service.py  chunking_service.py  guardrails_service.py  legal_parser.py  pdf_extractor.py  pinecone_service.py  rag_eval.py
Backend/scripts/: ingest_hf_datasets.py  ingest_legal_kb.py  run_eval_batch.py
Backend/tests/: test_api.py
Frontend/: eslint.config.js  index.css  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
Frontend/src/: App.jsx  index.css  instrument.js  main.jsx  router.jsx
Frontend/src/components/landing/: CTASection.jsx  FeaturesSection.jsx  HeroSection.jsx  StepsSection.jsx
Frontend/src/components/layout/: Footer.jsx  NavLink.jsx  Navbar.jsx  PageLayout.jsx  ProtectedRoute.jsx
Frontend/src/components/results/: LawReferencesTab.jsx  SuggestionsTab.jsx  SummaryTab.jsx
Frontend/src/components/ui/: AuroraGradient.jsx  Badge.jsx  Button.jsx  Card.jsx  FileDropzone.jsx  FloatingLegalArt.jsx  Logo.jsx  ProtectedImage.jsx  SectionHeading.jsx  Tabs.jsx  ThemeToggle.jsx  icons.jsx  legal-icons.jsx
Frontend/src/context/: ThemeContext.jsx  UploadContext.jsx
Frontend/src/hooks/: useChatAnimations.js  useScrollFadeIn.js  useScrollStagger.js
Frontend/src/pages/: About.jsx  Chat.jsx  Dashboard.jsx  Landing.jsx  NotFound.jsx  Results.jsx  SSOCallback.jsx  SignIn.jsx  Upload.jsx
Frontend/src/services/: api.js
Frontend/tests/: e2e.test.mjs
