[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.2",
    "httpx==0.28.1",
    "langchain==1.2.13",
    "langchain-community==0.4.1",
    "langchain-groq==1.1.2",
    "pydantic==2.12.2",
    "pydantic-settings==2.13.1",
    "pyjwt[crypto]==2.12.1",
    "pypdf==6.9.2",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "supabase==2.28.3",
    "uvicorn[standard]==0.42.0",
    "websockets>=11.0,<16",
    "pinecone[grpc]>=8.1.0",
    "datasets>=4.8.4",
    "pdfplumber>=0.11.9",
    "sentry-sdk>=2.57.0",
    "slowapi>=0.1.9",
    "redis>=7.4.0",
    "langfuse>=4.0.6",
    "fastembed>=0.8.0",
    "guardrails-ai>=0.10.0",
    # OCR fallback for scanned / Hindi legal PDFs.
    # Pinned exactly: 3.0.1 has an MKLDNN memory leak with device=cpu (Issue #15631).
    # 3.3.3 (Jan 2026) is post-fix and battle-tested.
    "paddleocr==3.3.3",
    "paddlepaddle==3.1.1",
    "pdf2image>=1.17.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.9.9",
]

# Pull paddlepaddle from the official CPU wheel index instead of PyPI.
# The default PyPI wheel pulls CUDA (~3GB); the CPU build is ~600MB.
# `explicit = true` scopes this index to paddlepaddle only — every other
# package still resolves from PyPI normally.
[tool.uv.sources]
paddlepaddle = { index = "paddle-cpu" }

[[tool.uv.index]]
name = "paddle-cpu"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
